Added input validation and progress indicator
The highlighted character is the current character
to be typed. It only moves if the the user types the
character correctly.

--- a/typuzzler/src/App.css
+++ b/typuzzler/src/App.css
@@ -65,3 +65,11 @@ button {
     transform: rotate(360deg);
   }
 }
+
+.Character-current {
+  background-color: #09d3ac;
+}
+
+.Character-out {
+  color: silver;
+}
