UI updates, documented deploy instructions

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
 }
 
 button {
-  background-color: #01a76f;
+  background-color: #511191;
   border: none;
   color: white;
   padding: 15px 32px;
